# dragon-ai-results

./: .gitignore  Analysis.ipynb  BERTScoreDefinitions.ipynb  CollectDefinitionEvaluations.ipynb  CollectEvaluations.ipynb  CollectRelationships.ipynb  DefinitionEvaluationAnalysis.ipynb  Makefile  README.md  RelationshipManualEval.ipynb  RelationshipsAnalysis.ipynb  pyproject.toml
conf/: eval-conf-cl-definition.yaml  eval-conf-cl-immune.yaml  eval-conf-definition.yaml  eval-conf-definition1.yaml  eval-conf-definition2.yaml  eval-conf-envo.yaml  eval-conf-foodon-definition.yaml  eval-conf-github.yaml  eval-conf-go-enzyme.yaml  eval-conf-logical-definition.yaml  eval-conf-main-model-gpt-4.yaml  eval-conf-main-model-nous-hermes-13b.yaml  eval-conf-main.yaml  eval-conf-oba.yaml  eval-conf-obi.yaml  eval-conf-pheno.yaml  eval-conf-template.yaml.jinja2  eval-conf-uberon.yaml  eval-conf.yaml
definitions-sheets/: combined.csv  definitions-src.tsv  eval.csv  key.tsv
historic/: envo-new-terms.tsv  oba-new-terms.tsv  obi-new-terms.tsv
inputs/: cl-testing-ids-2023.txt  foodon-testing-ids-2023.txt  go-testing-ids-2023.txt  hp-testing-ids-2023.txt  mondo-testing-ids-2023.txt  mp-testing-ids-2023.txt  uberon-testing-ids-2023.txt
results/: None.results.tsv  cl-defs-direct.tsv  ont_cl-Pdefinition-Mid.original_id-BGFalse-TrNone-Te50-Mgpt-3.5-turbo-EMopenai-ACdevdocs_cl.results.tsv  ont_cl-Pdefinition-Mid.original_id-BGFalse-TrNone-Te50-Mgpt-3.5-turbo-EMopenai-ACdevdocs_cl.results.yaml  ont_cl-Pdefinition-Mid.original_id-BGFalse-TrNone-Te50-Mgpt-3.5-turbo-EMopenai-ACgh_cl.results.tsv  (+325 more)
